# GameGrid

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose-dev.yml  docker-compose.yml  dockerfile  pull_request_template.md  pyproject.toml
.github/workflows/: buildAndPushContainerToGHCR.yaml  buildAndPushDockerContainerToDockerRegistry.yml  pylint.yml  test-docker.yml
app/: app.py  config.py  library_manager.py
app/static/: script.js  style.css
app/static/games/game01/: config.yaml  index.html
app/static/games/game02/: config.yaml  index.html
app/templates/: index.jinja2
nginx/: nginx.conf
