[project]
name = "GameGrid"
version = "0.1.1"
description = "A flask wrapper for your WebGL games"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "PixelWelt" }]
license = "MIT"
keywords = ["flask", "webgl", "arcade", "games"]

dependencies = [
  "uv",
  "blinker==1.9.0",
  "click==8.3.1",
  "colorama==0.4.6",
  "Flask==3.1.2",
  "Flask-Cors==6.0.2",
  "itsdangerous==2.2.0",
  "Jinja2==3.1.6",
  "loguru==0.7.3",
  "MarkupSafe==3.0.3",
  "gunicorn==23.0.0",
  "PyYAML==6.0.3",
  "Werkzeug==3.1.5",
  "win32_setctime==1.2.0"
]

[project.urls]
Repository = "https://github.com/PixelWelt/GameGrid"
